@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mjr] Only query Horde_History when it&apos;s required.
 * [jan] Fix system tasklist listing via WebDAV.
 * [rla] Add system tasklist support for Nag CalDAV access (Request #12342).
 * [jan] Fix task description tooltip (Bug #12421).
@@ -1390,12 +1391,13 @@
    <date>2013-06-05</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mjr] Only query Horde_History when it&apos;s required.
 * [jan] Fix system tasklist listing via WebDAV.
 * [rla] Add system tasklist support for Nag CalDAV access (Request #12342).
 * [jan] Fix task description tooltip (Bug #12421).
-* [mjr] Persist the tasklist and parent when creating a new task and using "Save and New" (Bug: 12400).
+* [mjr] Persist the tasklist and parent when creating a new task and using "Save and New" (Bug #12400).
 * [mjr] Fix tag browsing of shared tasklists (Bug #12405).
-* [mjr] Fix importing vTODO containing RELATED-TO fields (Bug #12355).
+* [mjr] Fix importing VTODOs containing RELATED-TO fields (Bug #12355).
 * [mjr] Add API methods for using history modification sequences.
    </notes>
   </release>
